# DataGeany

backend/: .gitignore  pyproject.toml
backend/playagno/: main.py  models.py  utils.py  workflow.py
backend/playagno/agents/: analytics_qna.py  chart_suggester.py  router.py  schema_inspector.py  vega_generator.py
backend/src/backend/: main.py
backend/src/backend/core/: config.py
backend/src/backend/domains/charts/: router.py  schemas.py  service.py
backend/src/backend/shared/ai_agents/: utils.py
backend/src/backend/shared/ai_agents/agents/: bar_chart_agent.py  chart_suggester_agent.py
backend/src/backend/shared/ai_agents/core/: agno_sdk_init.py
backend/src/backend/shared/database/: __init__.py  csv_storage.py  manager.py
backend/tests/: manual_db_test.py  test_405.py  test_csv_to_mysql.py  test_database.py  verify_charts.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/features/charts/api/: charts.ts
frontend/features/charts/components/: ChartArea.tsx  ChartCard.tsx  ChartsWorkspace.tsx  CsvUploader.tsx  DataPreview.tsx  SchemaView.tsx
frontend/features/charts/types/: index.ts
frontend/features/charts/utils/: dataProcessing.ts
